# flatdir

./: LICENSE  README.md  TODO.md  cspell.json  files.json  mkdocs.yml  pyproject.toml  runBump.sh  test_mindepth.py  test_pattern.py
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml  main.yml
docs/: index.md
examples/: validate_with_great_expectations.py
src/flatdir/: __main__.py  compare.py  ics.py  listing.py  plugins.py  plugins_loader.py
src/flatdir/plugins/: defaults.py  depth.py  ext.py  extended.py  filename_length.py  folder_content.py  full_path.py  mime.py  options.py  parent.py  pattern_FULLYR_KEYWORDS.py  pattern_PRE_YR1_YR2.py  pattern_PRE_YR1_YR2_ID_NAME.py  pattern_PRE_YR1_YR2_LOW_UP.py  pattern_YR_MON_DAY_KW.py  text.py  (+6 more)
tests/: test_add.py  test_add_depth.py  test_arguments.py  test_configurable_plugins.py  test_defaults_plugin_equivalence.py  test_depth.py  test_dict_field.py  test_diff_option.py  test_exclude.py  test_extended_plugin.py  test_fields.py  test_folder_content_plugin.py  test_full_path.py  test_ics.py  test_id.py  test_ignore_typical.py  test_json_output.py  test_limit.py  test_match.py  test_mime_plugin.py  test_min_depth.py  test_nested.py  test_no_defaults.py  test_no_defaults_filters.py  test_only.py  test_only_existence.py  test_output.py  test_parent.py  test_pattern_PRE_YR1_YR2.py  test_pattern_PRE_YR1_YR2_LOW_UP.py  test_pattern_YR_MON_DAY_KW.py  test_pattern_parent_PRE_YR1_YR2.py  test_pattern_sequence_id.py  test_plugin_depth.py  test_sort.py  test_text_plugin.py  test_tree.py  test_version.py  test_with_headers.py
