[project]
name = "flatdir"
description = "A Python library to create a flat JSON index of files and directories."
readme = "docs/index.md"
requires-python = ">=3.10,<4"
license = "MIT"
authors = [{ name = "Your Name" }]
classifiers = [
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]
dependencies = []
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "flatdir.__version__"}

[project.urls]
Homepage = "https://github.com/romsson/flatdir"
Repository = "https://github.com/romsson/flatdir"

[dependency-groups]
tests = [
  "coverage[toml]>=7,<8",
  "httpx>=0.23,<1",
  "pytest-mock>=3,<4",
  "pytest>=8.1.1,<9",
]

[tool.coverage.run]
command_line = "-m pytest"
source_pkgs = ["flatdir", "tests"]

[tool.coverage.paths]
flatdir = ["src/flatdir"]
tests = ["tests"]

[tool.pytest.ini_options]
addopts = "-q"
minversion = "6.0"
testpaths = ["tests"]
pythonpath = ["src"]